added Lobster font

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,7 @@
 // Fonts
 @import url('https://fonts.bunny.net/css?family=Nunito');
 @import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Lobster&display=swap');
 
 // Variables
 @import 'variables';
