--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -47,6 +47,7 @@ $theme-colors: (
 //     "danger":    $danger,
 // );
 
+$border-radius: 0;
 
 // nav
 $nav-link-color: $dark;
@@ -56,5 +57,9 @@ $nav-tabs-border-radius: 50rem;
 $nav-pills-border-radius: 50rem;
 $nav-pills-link-active-bg: $dark;
 
+// carousel
 $carousel-transition-duration: .6s;
 $carousel-transition: transform $carousel-transition-duration none;
+
+// card
+$card-border-width: 0;
